numbers change, resource change, spacing fix

--- a/app/client/stylesheets/_home.scss
+++ b/app/client/stylesheets/_home.scss
@@ -403,13 +403,13 @@
     padding: 3% 5% 5%;
     display: flex;
     flex-direction: column;
-    margin-top: -160px;
+    margin-top: -132px;
 
       .sponsor-mini-robo {
         height: 280px;
         width: 400px;
         margin-right: 60%;
-        transform: translateY(-40px);
+        transform: translateY(-20px);
       }
     }
 
