--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -58,6 +58,10 @@ body {
   width: 100%;
   font-size: 1.02em;
   background: linear-gradient(#91dfe1, #cca2ff);
+
+  .numbers {
+    font-family: 'Roboto', 'Catamaran';
+  }
 }
 
 body {
